# gnupg-windows-gnupg

./: CMakeLists.txt  dirent.h.in  gnupg-config.h.in  strings.h.in
agent/: gpg-agent.c
common/: dirent-w32.c  dynload.h  exechelp-w32.c  gettimeofday-w32.c  homedir.c  sleep-w32.c  sysutils.c  t-stringhelp.c  utf8conv.c
dirmngr/: certcache.c  dns-stuff.c  http.c
g10/: call-dirmngr.c  migrate.c  test.c
scd/: scdaemon.c
tests/gpgscm/: ffi.c  scheme.c
tests/openpgp/: decrypt-session-key.scm  decrypt-unwrap-verify.scm
tools/: gpgparsemail.c  watchgnupg.c
